Name:                risk
Version:             0.1.0
Synopsis:            risk
Description:         risk
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>, Nicolas Di Prima <nicolas@di-prima.fr>
Author:              Vincent Hanquez <vincent@snarc.org>, Nicolas Di Prima <nicolas@di-prima.fr>
Maintainer:          vincent@snarc.org
Category:            risk
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/vincenthz/hs-risk
Bug-Reports:         https://github.com/vincenthz/hs-risk/issues
Cabal-Version:       >=1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/vincenthz/hs-risk

Library
  Exposed-modules:   Risk.Types
  -- Other-modules:     O
  Build-depends:     base >= 4 && < 5
  ghc-options:       -Wall -fwarn-tabs
  default-language:  Haskell2010

Executable           risk-server
  Main-Is:           Risk.hs
  ghc-options:       -Wall -fno-warn-missing-signatures
  Hs-Source-Dirs:    Server
  Build-depends:     base >= 4 && < 5
                   , risk
                   , haskeline
                   , network
                   , connection
  default-language:  Haskell2010

Executable           risk-client
  Main-Is:           Risk.hs
  ghc-options:       -Wall -fno-warn-missing-signatures
  Hs-Source-Dirs:    Client
  Build-depends:     base >= 4 && < 5
                   , risk
                   , haskeline
                   , network
                   , connection
  default-language:  Haskell2010

--Test-Suite test-risk
--  type:              exitcode-stdio-1.0
--  hs-source-dirs:    tests
--  Main-is:           Tests.hs
--  Build-Depends:     base >= 3 && < 5
--                   , mtl
--                   , tasty
--                   , tasty-quickcheck2
--                   , tasty-hunit
--                   , risk
--  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
--  default-language:  Haskell2010
